--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,10 +1,11 @@
 pipeline:
-  agent:
-    none:
+  environment: DOCKERHUB_CREDENTIALS=credentials('haleema-dockerhub')
+  agent: none
   stages:
     - stage: "Stage1"
+      agent: any
       steps:
-        - echo "1"
-    - stage: "Stage2"
-      steps:
-        - echo "2"
+        - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
+        - sh "java -version"
+        - sh "git --version"
+        - sh "docker --version"
