--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,7 +1,6 @@
 pipeline:
   environment: DOCKERHUB_CREDENTIALS=credentials('haleema-dockerhub')
-  agent:
-    none:
+  agent: any
   stages:
     - stage: "Stage1"
       steps:
