--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,5 +1,7 @@
 pipeline:
   environment: DOCKERHUB_CREDENTIALS=credentials('haleema-dockerhub')
+  agent:
+    none:
   stages:
     - stage: "Stage1"
       steps:
