--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,5 +1,6 @@
 pipeline:
-  environment: DOCKERHUB_CREDENTIALS=credentials('haleema-dockerhub')
+  environment:
+     DOCKERHUB_CREDENTIALS=credentials('haleema-dockerhub')
   agent:
     none:
   stages:
