--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,10 +1,10 @@
 pipeline:
+  withEnv: DOCKERHUB_CREDENTIALS = credentials('haleema-dockerhub')
   agent:
     none:
   stages:
     - stage: "Stage1"
       steps:
-        - withEnv: DOCKERHUB_CREDENTIALS = credentials('haleema-dockerhub')
         - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
         - sh "java -version"
         - sh "git --version"
