--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,7 +1,8 @@
-rpipeline:
+pipeline:
   environment: DOCKERHUB_CREDENTIALS = credentials('haleema-dockerhub')
-  agent: none
-    stages:
+  agent: 
+    none:
+  stages:
       - stage: "Stage1"
         steps:
           - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
