--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,7 +1,6 @@
 pipeline:
   environment: 
-     - name: DOCKERHUB_CREDENTIALS
-     - value: credentials('haleema-dockerhub')
+    DOCKERHUB_CREDENTIALS = "credentials('haleema-dockerhub')"
   agent: 
     none:
   stages:
