--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,12 +1,13 @@
 pipeline:
-  environment: 
-    DOCKERHUB_CREDENTIALS = credentials('haleema-dockerhub')
+  
   agent: 
     none:
   stages:
       - stage: "Stage1"
+          environment: 
+            DOCKERHUB_CREDENTIALS = credentials('haleema-dockerhub')
         steps:
-          - sh "echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin"
+          - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin
           - sh "java -version"
           - sh "git --version"
           - sh "docker --version"
