--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -8,7 +8,7 @@ pipeline:
       - stage: "Stage1"
           
         steps:
-          - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin
+          - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
           - sh "java -version"
           - sh "git --version"
           - sh "docker --version"
