--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,6 +1,6 @@
 pipeline:
    agent: 
-    none:
+    any:
    environment: 
     DOCKERHUB_CREDENTIALS: credentials('haleema-dockerhub')
    stages:
