--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -6,7 +6,7 @@ pipeline:
    stages:
      - stage: "Stage1"
        steps:
-         - sh 'echo $[DOCKERHUB_CREDENTIALS_PSW] | docker login -u $[DOCKERHUB_CREDENTIALS_USR] --password-stdin'
+         - sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
          - sh "java -version"
          - sh "git --version"
          - sh "docker --version"
