--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -1,3 +1,14 @@
+@Library("shared-library") _
+def str = 
+'''
+steps:
+ - type: sh
+   script: ls -la 
+ - type: echo
+   message: xxx
+'''
+Closure closure = yamlCompiler(str)
+closure.call()
 pipeline:
    agent: 
     any:
