--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -18,6 +18,6 @@ pipeline:
          script:
            try:
              - sh 'echo "rpi" '
-           catch (Throwable e): 
+           catch: Throwable e
              - echo "Caught ${e.toString()}"
              - sh 'echo "rpi" '
