--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -18,6 +18,6 @@ pipeline:
          script:
            try:
              - sh 'echo "rpi" '
-           except:
+           except yaml.YAMLError, exc:
              - echo "Caught "
              - sh 'echo "rpi" '
